Minor typo fixes and removed subsection headings for the SU2 simulation section to cleanup the table of contents.

--- a/book/Parts/Part2.tex
+++ b/book/Parts/Part2.tex
@@ -78,7 +78,7 @@ where $\mu$ is the dynamic viscosity and $\mathbf{I}$ is an identity matrix. Whe
 \begin{equation}
 	\vec{F_v} = \oint_S \tau \cdot \hat{n} ds.
 \end{equation}
-With the inviscid and forces determined, conservation of momentum can be written as
+With the inviscid and viscous forces determined, conservation of momentum can be written as
 \begin{equation}
 	 \frac{d}{dt}\int_\Omega \rho \vec{v} d\vec{x} + \oint_S \rho \vec{v} (\vec{v} \cdot \hat{n}) ds = \oint_S -P\hat{n} ds + \oint_S \tau \cdot \hat{n} ds,
 \end{equation}
