--- a/book/main.tex
+++ b/book/main.tex
@@ -94,7 +94,7 @@
 ~\vfill
 \thispagestyle{empty}
 
-\noindent Copyright \copyright\ 2019 Brian C. Vermeire\\ % Copyright notice
+\noindent Copyright \copyright\ 2020 Brian C. Vermeire\\ % Copyright notice
 
 \noindent \textsc{Published by Concordia University}\\ % Publisher
 
@@ -102,7 +102,7 @@
 
 \noindent Licensed under the Creative Commons Attribution-NonCommercial 3.0 Unported License (the ``License''). You may not use this file except in compliance with the License. You may obtain a copy of the License at \url{http://creativecommons.org/licenses/by-nc/3.0}. Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \textsc{``as is'' basis, without warranties or conditions of any kind}, either express or implied. See the License for the specific language governing permissions and limitations under the License.\\ % License information, replace this with your own license (if any)
 
-\noindent \textit{First printing, March 2019} % Printing/edition date
+\noindent \textit{First printing, October 2020} % Printing/edition date
 
 %----------------------------------------------------------------------------------------
 %	FOREWORD
@@ -173,11 +173,11 @@
 %	INDEX
 %----------------------------------------------------------------------------------------
 
-\cleardoublepage % Make sure the index starts on an odd (right side) page
-\phantomsection
-\setlength{\columnsep}{0.75cm} % Space between the 2 columns of the index
-\addcontentsline{toc}{chapter}{\textcolor{ocre}{Index}} % Add an Index heading to the table of contents
-\printindex % Output the index
+%\cleardoublepage % Make sure the index starts on an odd (right side) page
+%\phantomsection
+%\setlength{\columnsep}{0.75cm} % Space between the 2 columns of the index
+%\addcontentsline{toc}{chapter}{\textcolor{ocre}{Index}} % Add an Index heading to the table of contents
+%\printindex % Output the index
 
 %----------------------------------------------------------------------------------------
 
