Fixed grid spacing for ipython notebooks for advection, diffusion, and burgers.

--- a/notebooks/Diffusion.ipynb
+++ b/notebooks/Diffusion.ipynb
@@ -46,8 +46,8 @@
    "source": [
     "def diffusion(b, L, n, dt, tf):\n",
     "    # Build grid\n",
-    "    x = np.linspace(0, L, n)\n",
     "    dx = L/n\n",
+    "    x = np.linspace(0, L - dx, n)\n",
     "    \n",
     "    # Initialize solution\n",
     "    u = np.exp(-40*(x - 1/2)**2)\n",
